add dependencies, update scaffold

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,257 +1,1 @@
-html {
-  height: 100%;
-  box-sizing: border-box;
-}
-body {
-  background-color: #f8f5f0;
-  position: relative;
-  margin: 0;
-  padding-bottom: 75px;
-  padding-top: 75px;
-  min-height: 100%;
-}
-nav.navbar {
-  margin-bottom: 0;
-}
-nav.navbar-default .navbar-brand,
-nav.navbar-default .navbar-nav>li>a {
-  color: #f8f5f0;
-}
-footer {
-  background-color: #3e3f3a;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding-top: 15px;
-  padding-bottom: 5px;
-  color: #f8f5f0;
-}
-textarea {
-  width: 100%;
-  height: 100px;
-  resize: vertical;
-  margin-bottom: 10px;
-}
-
-.jumbotron {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  padding-bottom: 0;
-  margin-bottom: 0;
-  margin-top: -75px;
-  background-color: #FFF4E2;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, .3);
-}
-.jumbotron .container {
-  align-self: center;
-}
-.jumbotron img {
-  width: 100%;
-  height: auto;
-  max-width: 600px;
-  margin-bottom: 35px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, .3);
-}
-.jumbotron a {
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-top: 35px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, .3);
-}
-
-.below-fold .row {
-  padding-top: 45px;
-  padding-bottom: 45px;
-}
-.below-fold img {
-  width: 100%;
-  height: auto;
-}
-img.movie-cover {
-  max-width: 200px;
-  margin-top: 15px;
-  margin-bottom: 25px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, .3);
-}
-.below-fold .panel {
-  padding: 15px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, .3);
-}
-.below-fold h3 {
-  margin-bottom: 25px;
-}
-.row.darker-row {
-  background-color: #FFC96E;
-}
-.row.lighter-row {
-  background-color: #FFEDD0;
-}
-#movie-search {
-  width: 50%;
-  text-align: center;
-  margin-top: 15px;
-  margin-bottom: 25px;
-}
-#movie-search:focus {
-  outline: 2px solid #3e3f3a;
-}
-.round-img {
-  border-radius: 100%;
-}
-.person-img {
-  max-width: 50px;
-  display: inline-block;
-  margin-right: 15px
-}
-.looking {
-  display: inline-block;
-}
-.swap-btn {
-  float: right;
-  letter-spacing: .5px;
-  margin-top: 8px;
-}
-.well {
-  border: 1px solid #3e3f3a;
-  background-color: #F3EDE4;
-}
-
-/*#login h2, #create h2 {
-  margin-bottom: 25px;
-  margin-top: 90px;
-}*/
-#login input {
-  margin-bottom: 15px;
-}
-#login .login-btn {
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-#login .fb-login .fa-facebook {
-  margin-right: 15px;
-}
-#login .fb-login {
-  margin-bottom: 15px;
-  margin-top: 15px;
-}
-#login label {
-  margin-top: 10px;
-}
-#login input {
-  width: 75%;
-  text-align: center;
-}
-
-#detail {
-  margin-top: 25px;
-}
-#detail .movie-cover,
-#detail h1,
-#detail h3 {
-  margin-top: 0;
-}
-#detail p {
-  margin-bottom: 25px;
-}
-#detail img {
-  width: 100%;
-  height: auto;
-}
-#detail .send-message {
-  float: right;
-}
-
-/*#new-listing, #profile, #browse, #admin {
-  margin-top: 90px;
-}*/
-#new-listing input {
-  width: 100%;
-  margin-bottom: 15px;
-}
-#new-listing input[type="radio"] {
-  position: fixed;
-  top: -99999px;
-  left: -99999px;
-}
-#new-listing input[type="radio"]+label {
-  border: 2px solid #3e3f3a;
-  border-radius: 4px;
-  padding: 15px;
-  width: 100%;
-  margin-bottom: 25px;
-}
-#new-listing input[type="radio"]:checked+label {
-  background-color: #E4D8C7;
-}
-#new-listing .post-btn {
-  float: right;
-}
-
-#profile .edit-btn {
-  float: right;
-  padding: 5px 13px;
-}
-#profile .fa-trash,
-#profile .fa-paper-plane {
-  float: right;
-}
-#profile textarea {
-  margin-top: 15px;
-}
-#profile .inbox {
-  height: 45vh;
-  overflow-y: scroll;
-}
-#profile .well.scrolly {
-  height: 50vh;
-  overflow-y: scroll;
-}
-#profile .well .trade-panel {
-  padding: 10px;
-  padding-bottom: 20px;
-  vertical-align: top;
-}
-#profile .well .trade-panel img {
-  display: inline-block;
-  vertical-align: top;
-  margin-bottom: 10px;
-}
-#profile .well .trade-panel h3 {
-  display: inline-block;
-  vertical-align: top;
-  margin-top: 0;
-}
-#profile .well .trade-panel h4 {
-  margin-top: 0;
-  display: inline-block;
-}
-#profile .well .history {
-  padding-bottom: 5px;
-}
-#profile .history img {
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
-#browse select,
-#browse input {
-  width: 100%;
-}
-#browse .movie-cover {
-  margin-top: 25px;
-  margin-bottom: 10px;
-}
-#browse h4.movie-title {
-  margin-top: 0;
-  margin-bottom: 15px;
-  word-wrap: normal;
-}
-#browse h4.movie-title a {
-  word-wrap: normal;
-}
-
-#admin td {
-  vertical-align: middle;
-}
+body{background-color:#00f}
