update style of inputs and buttons, add autocomplete to inputs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,1 @@
-footer{position:fixed;bottom:0;width:100%}
+footer{height:50px;bottom:0;width:100%}body{padding-top:62px}md-autocomplete{display:inline-block;width:calc(100% - 108px);min-width:unset}
