--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -1,5 +1,16 @@
 footer {
-  position: fixed;
+
+  height: 50px;
   bottom: 0;
   width: 100%;
+}
+
+body {
+  padding-top: 62px;
+}
+
+md-autocomplete {
+  display: inline-block;
+  width: calc(100% - 108px);
+  min-width: unset;
 }
