--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
   <title>MovieSwap</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-QqZs0aSOGFan3GWVdP4PyCBp6icaF/4n8Q+wsmZUTiiVIqE4r4tFYcb8Osf+8y45" crossorigin="anonymous">
+  <link rel="stylesheet" href="/bower_components/angular-material/angular-material.min.css">
   <link rel="stylesheet" href="./stylesheets/style.css">
  
 
@@ -20,14 +21,20 @@
 
   
 
+ <footer class="text-center">
+    <p>&#169;2016</p>
+  </footer>
 
 
  
+  <script src="/bower_components/angular/angular.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="/bower_components/angular/angular.min.js"></script>
+  <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
+  <script src="/bower_components/angular-aria/angular-aria.min.js"></script>
+  <script src="/bower_components/angular-material/angular-material.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
   <script src="./js/bundle.js"></script>
