--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,1 @@
-footer{height:50px;bottom:0;width:100%}body{padding-top:62px}md-autocomplete{display:inline-block;width:calc(100% - 108px);min-width:unset}
+footer{height:50px;bottom:0;width:100%}body{padding-top:62px}md-autocomplete{display:inline-block;width:calc(100% - 108px);min-width:unset}div.jumbotron{background-color:#97c52c;margin:0}svg#bigTriangleColor{pointer-events:none}#bigTriangleColor path{fill:#97c52c;stroke:#97c52c;stroke-width:2}
