--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MovieSwap</title>
+  <title>Dvd Swap ejs</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-QqZs0aSOGFan3GWVdP4PyCBp6icaF/4n8Q+wsmZUTiiVIqE4r4tFYcb8Osf+8y45" crossorigin="anonymous">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
 
@@ -39,7 +39,8 @@
       <h1>Browse</h1>
     </div>
     <div class="col-xs-12 col-sm-2">
-      <input type="text" placeholder="Search">
+      <input id="userInput" type="text" placeholder="Search for">
+      <button type="button" id="send">Submit this</button>
     </div>
     <div class="col-xs-12 col-sm-2">
       <select name="genre" id="genre">
@@ -136,5 +137,6 @@
 
   <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src='/user/user.js'/>
 </body>
 </html>
