add to remote ashley

--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -76,9 +76,9 @@ svg#bigTriangleColor {
 
 .well {
   background-color: $interestPrimary;
-  font-size: 5rem;
-  color: white:
-
+  // font-size: 5rem;
+  // color: white;
+}
 .scrolly {
   height: 400px;
   overflow-x: scroll;
