update autocompletes, connecting to api, receiving data

--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -84,7 +84,7 @@ svg#bigTriangleColor {
   display: inline-block;
 }
 .well {
-  background-color: white;
+  background-color: #F6F5F1;
   box-shadow: 2px 2px 5px #888888;
 
 
